--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,10 +36,10 @@
                 {% endif %}
     {% endfor %}     
 
-    {% if site.version %}
-    <a class="sidebar-nav-item" href="{{ site.github_repo }}"><em>lanyon-plus project</em></a>
-    <a class="sidebar-nav-item" href="{{ site.github_repo }}/releases/tag/v{{ site.version }}">Download v{{ site.version }}</a>
-    {% endif %}
+    <!-- {% if site.version %} -->
+    <!-- <a class="sidebar-nav-item" href="{{ site.github_repo }}"><em>lanyon-plus project</em></a> -->
+    <!-- <a class="sidebar-nav-item" href="{{ site.github_repo }}/releases/tag/v{{ site.version }}">Download v{{ site.version }}</a> -->
+    <!-- {% endif %} -->
   </nav>
 
 <hr class="gh">
