--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 
 <div class="wrapper">
-  <center> <a href="/index.html"><div class="site-title">   {{site.title}} </div></a></center>
+  <center> <a href="/"><div class="site-title">   {{site.title}} </div></a></center>
 </div>
 <div class="wrapper site-description">
 <center>  {{site.description}} </center>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
-    <a class="page-link" href="{{site.url}}{{site.baseurl}}">HOME</a>
+    <a class="page-link" href="{{site.url}}">HOME</a>
 
     {% for sitePage in site.pages %}
     {% if sitePage.title %}
