--- a/css/style.scss
+++ b/css/style.scss
@@ -211,11 +211,11 @@ pre {
     padding-left: $spacing-unit;
     @extend %clearfix;
 
-    // @include media-query($on-laptop) {
-    //     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-    //     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        // padding-right: $spacing-unit / 2;
-        // padding-left: $spacing-unit / 2;
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+        max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+        padding-right: $spacing-unit / 4;
+        padding-left: $spacing-unit / 4;
     }
 }
 
