--- a/css/style.scss
+++ b/css/style.scss
@@ -214,8 +214,8 @@ pre {
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
         max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-        padding-right: $spacing-unit / 4;
-        padding-left: $spacing-unit / 4;
+        padding-right: $spacing-unit * 2;
+        padding-left: $spacing-unit * 2;
     }
 }
 
