--- a/css/style.scss
+++ b/css/style.scss
@@ -341,6 +341,11 @@ pre {
   text-transform: capitalize;
   font-weight: 500;
   margin-top: 1em;
+  @include media-query($on-palm) {
+      .wrapper {
+        font-size: 32px;
+      }
+  }
 }
 .site-description {
   font-size: 14px;
