--- a/css/style.scss
+++ b/css/style.scss
@@ -293,11 +293,15 @@ pre {
   padding-top: 3.5em;
   text-align: center;
 
-  @include media-query($on-laptop) {
+  @include media-query($on-laptop){
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     padding-right: $spacing-unit * 4;
     padding-left: $spacing-unit * 4;
+  }
+  @include media-query($on-palm){
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
   }
 }
 .postDate {
@@ -533,6 +537,11 @@ pre {
     padding-right: $spacing-unit * 4;
     padding-left: $spacing-unit * 4;
   }
+  @include media-query($on-palm){
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+  }
+
   p {
     font-size: 0.9rem;
   }
