Tweaks archives, adds archive page

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -20,7 +20,7 @@ layout: page
   <a class='postLink' href="{{post.url}}">{{post.title}}</a>
   </div>
   <div class="postExt">
-    {{post.excerpt}}
+    {{post.description}}
   </div>
 </div>
 {% endif %}
