changes to sub form

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
     {{ content }}
   </div>
 
- <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/coyotespike" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/coyotespike', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+ <form style="border:1px solid #ccc;padding:3px;text-align:center;" class="post-content" action="https://tinyletter.com/coyotespike" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/coyotespike', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Sign up for my (occasional) newsletter, featuring standalone posts, or several short takes together!</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
   <footer class="postNavigation">
   {% if page.previous.url %}
