--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -16,7 +16,7 @@ $l-grey-color-light: lighten($l-grey-color, 40%);
 $l-grey-color-dark:  darken($l-grey-color, 25%);
 $l-code: #EEF;
 // $l-crimson: #DC143C;
-$l-crimson: #eb1f48
+$l-crimson: #A41532
 $l-nav: $l-link-color;
 $l-page: $l-link-color;
 
@@ -32,7 +32,7 @@ $d-grey-color-light: lighten($l-grey-color, 40%);
 $d-grey-color-dark:  darken($l-grey-color, 25%);
 $d-code: #2f2f33;
 // $d-crimson: #DC143C;
-$l-crimson: #eb1f48
+$l-crimson: #A41532
 $d-nav: $d-link-color;
 $d-page: $d-link-color;
 
