--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -32,7 +32,7 @@ $d-grey-color-light: lighten($l-grey-color, 40%);
 $d-grey-color-dark:  darken($l-grey-color, 25%);
 $d-code: #2f2f33;
 // $d-crimson: #DC143C;
-$l-crimson: #A41532
+$d-crimson: #A41532
 $d-nav: $d-link-color;
 $d-page: $d-link-color;
 
