--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -15,8 +15,7 @@ $l-grey-color:       #828282;
 $l-grey-color-light: lighten($l-grey-color, 40%);
 $l-grey-color-dark:  darken($l-grey-color, 25%);
 $l-code: #EEF;
-// $l-crimson: #DC143C;
-$l-crimson: #A41532
+$l-crimson: #A41532;
 $l-nav: $l-link-color;
 $l-page: $l-link-color;
 
@@ -31,8 +30,7 @@ $d-grey-color:       #A7A7A7;
 $d-grey-color-light: lighten($l-grey-color, 40%);
 $d-grey-color-dark:  darken($l-grey-color, 25%);
 $d-code: #2f2f33;
-// $d-crimson: #DC143C;
-$d-crimson: #A41532
+$d-crimson: #A41532;
 $d-nav: $d-link-color;
 $d-page: $d-link-color;
 
