--- a/css/style.scss
+++ b/css/style.scss
@@ -565,8 +565,10 @@ pre {
   }
 }
 .postPreviews {
-  padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+  padding-right: $spacing-unit / 2;
+  padding-left: $spacing-unit / 2;
 }
 
 /**
