--- a/css/style.scss
+++ b/css/style.scss
@@ -202,6 +202,10 @@ pre {
     padding-left: $spacing-unit;
     @extend %clearfix;
 
+    @include media-query($on-palm) {
+      max-width: -webkit-calc(#{800} - (#{$spacing-unit} * 2));
+      max-width:         calc(#{800} - (#{$spacing-unit} * 2));
+    }
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width * 1.5} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
