--- a/css/style.scss
+++ b/css/style.scss
@@ -203,11 +203,11 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-palm) {
-      max-width: -webkit-calc(#{800} - (#{$spacing-unit} * 2));
-      max-width:         calc(#{800} - (#{$spacing-unit} * 2));
+      max-width: -webkit-calc(800 - (#{$spacing-unit} * 2));
+      max-width:         calc(800 - (#{$spacing-unit} * 2));
     }
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width * 1.5} - (#{$spacing-unit}));
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
